@@ -306,4 +306,6 @@ V0.71.4 RC2:
       This setting allows you disable the ability for a nation to pay to remain neutral during a war.
       Toggle in game with '/townyadmin war neutral [on/off]
     - Added fs as an abreviation for forsale when used in '/plot forsale'.
-    
+    - Corrected an error when a nation sets neutral status no message was sent of the cost.
+    - Added global messages of what nations are at war.
+    - Added better sanity checking on the global neutral settings.
